[package]
name = "system_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }